[package]
name = "otlp"
version = "0.6.0"
edition = "2024"
resolver = "3"
rust-version = "1.94"
authors = ["Rust OTLP Team"]
description = "OpenTelemetry Protocol (OTLP) implementation with Rust 1.94+ features"
license = "MIT OR Apache-2.0"
keywords = [
  "opentelemetry",
  "otlp",
  "observability",
  "telemetry",
  "async",
  "grpc",
]
categories = [
  "development-tools::debugging",
  "network-programming",
  "asynchronous",
]

[dependencies]
# OpenTelemetry核心依赖（统一使用 v0.31.0 - 最新稳定版本 2025年10月23日）
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-proto = { workspace = true, optional = true }

# 异步运行时和网络
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# gRPC和HTTP客户端
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# 序列化和反序列化
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
prost-types = { workspace = true }
bincode = { workspace = true }     # 使用工作区版本

# 并发和同步
parking_lot = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }     # 使用工作区版本

# 压缩算法（使用稳定版本 - 2025-01更新）
flate2 = "1.1.9"    # gzip压缩 (更新: 1.1.8 -> 1.1.9, 2025-03)
brotli = "8.0.2"    # Brotli压缩
zstd = "0.13.3"     # Zstandard压缩
lz4_flex = "0.11.5" # LZ4压缩

# 异步trait
async-trait = { workspace = true, optional = true }

# 系统信息
num_cpus = { workspace = true }
sysinfo = "0.33"

# 随机数生成
rand = { workspace = true }

# 加密和哈希
sha2 = { workspace = true } # 使用工作区版本
ring = { version = "0.17", optional = true } # 真实加密实现

# 零知识证明 (bellman)
bellman = { version = "0.14", optional = true }
bls12_381 = { version = "0.8", optional = true }
ff = { version = "0.13", optional = true }

# 同态加密 (tfhe-rs 替代 concrete，因为 concrete API 变化较大)
tfhe = { version = "0.8", optional = true, features = ["boolean", "shortint", "integer"] }

# 性能分析
pprof = { version = "0.14", features = ["flamegraph", "protobuf"], optional = true }

# SIMD优化 (Rust 1.64+ 标准库)

# 错误处理和日志
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-stdout = { workspace = true }

# HTTP 类型
http = { workspace = true }

# 系统信息
hostname = "0.4"

# 配置管理
config = { workspace = true }

# 时间处理
chrono = { workspace = true }

# 目录操作 (用于声明式配置)
dirs = { workspace = true }

# 其他常用库
uuid = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true } # 使用工作区版本
async-compression = { version = "0.4.41", features = [
  "tokio",
  "zstd",
  "gzip",
  "brotli",
] }

# Profiling依赖
backtrace = { version = "0.3", optional = true }

# eBPF支持（可选特性，需要Linux内核 >= 5.8）
# 注意: 直接定义依赖，因为 workspace dependencies 不能是 optional
aya = { version = "0.13.1", optional = true }
object = { version = "0.38", optional = true }
fastrand = "2.3.0"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
warp = { version = "0.4.2", features = ["server"] }
half = { workspace = true }  # FP16 support for Rust 1.94 examples

# Kubernetes dependencies for examples
kube = { version = "0.97", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
serde_yaml = "0.9"

[lib]
doctest = false  # 暂时禁用文档测试，需要修复示例代码

[[bench]]
name = "simple_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[features]
default = ["async", "grpc", "http"]
full = ["async", "grpc", "http", "monitoring", "backtrace", "client-enhancements"]
# eBPF支持（需要Linux内核 >= 5.8，CAP_BPF权限）
ebpf = ["dep:aya", "dep:object"]
# 客户端增强功能
client-enhancements = []

# 核心功能特性
async = ["tokio/full", "async-trait"]
grpc = [
  "tonic",
  "prost",
  "opentelemetry-proto",
  "opentelemetry-proto/gen-tonic",
]
http = ["reqwest", "hyper"]

# 监控和可观测性特性
monitoring = []

# 性能优化特性
performance = []

# Profiling特性
backtrace = ["dep:backtrace"]
real-profiling = ["dep:pprof"]  # 真实性能分析实现

# 真实加密
real-crypto = ["dep:ring"]  # 使用ring库实现真实加密

# 零知识证明
zk-proofs = ["dep:bellman", "dep:bls12_381", "dep:ff"]

# 同态加密
homomorphic-encryption = ["dep:tfhe"]

# 完整功能 (真实实现)
real-full = ["real-crypto", "real-profiling", "simd-optimized", "zk-proofs", "homomorphic-encryption"]

# Collector Kubernetes 支持
collector-k8s = []

# SIMD优化 (使用std::simd)
simd-optimized = []

# 示例文件待创建或移动到正确位置
# [[example]]
# name = "quick_optimizations_demo"
# path = "examples/quick_optimizations_demo.rs"
#
# [[example]]
# name = "integrated_optimizations_demo"
# path = "examples/integrated_optimizations_demo.rs"
#
# [[example]]
# name = "enhanced_monitoring_demo"
# path = "examples/enhanced_monitoring_demo.rs"
#
# [[example]]
# name = "k8s_complete_deployment_demo"
# path = "examples/k8s_complete_deployment_demo.rs"

# 2025年技术趋势对齐示例
# 注意: 示例文件位于项目根目录的examples/目录
# 如需运行，请使用: cargo run --example <name> --manifest-path Cargo.toml

# eBPF 示例
# 注意: 以下示例文件待创建
# [[example]]
# name = "ebpf_complete"
# path = "../../examples/ebpf_complete_example.rs"
# required-features = ["ebpf"]
#
# [[example]]
# name = "ebpf_profiling"
# path = "../../examples/ebpf_profiling_example.rs"
# required-features = ["ebpf"]
#
# [[example]]
# name = "ebpf_network_tracing"
# path = "../../examples/ebpf_network_tracing_example.rs"
# required-features = ["ebpf"]
#
# [[example]]
# name = "ebpf_syscall_tracing"
# path = "../../examples/ebpf_syscall_tracing_example.rs"
# required-features = ["ebpf"]

# Rust 1.94 Feature Examples
[[example]]
name = "rust_1_94_array_windows_demo"
path = "../../examples/rust_1_94_array_windows_demo.rs"

[[example]]
name = "rust_1_94_lazy_lock_demo"
path = "../../examples/rust_1_94_lazy_lock_demo.rs"

[[example]]
name = "rust_1_94_math_constants_demo"
path = "../../examples/rust_1_94_math_constants_demo.rs"

[[example]]
name = "rust_1_94_simd_fp16_demo"
path = "../../examples/rust_1_94_simd_fp16_demo.rs"
