[package]
name = "otlp-collector"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.92"

[lib]
name = "otlp_collector"
path = "src/lib.rs"

[[bench]]
name = "collector_bench"
harness = false

[dependencies]
tokio = { version = "1.40", features = ["full"] }
bytes = "1.7"
crossbeam = "0.8"
prost = "0.13"
tonic = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
